@@ -152,8 +152,16 @@ typedef enum input_joystick_button {
   INPUT_JOYSTICK_LEFT,
   INPUT_JOYSTICK_RIGHT,
 
-  INPUT_JOYSTICK_FIRE,
-  INPUT_JOYSTICK_FIRE_1 = INPUT_JOYSTICK_FIRE,
+  INPUT_JOYSTICK_FIRE_1,
+  INPUT_JOYSTICK_FIRE_2,
+  INPUT_JOYSTICK_FIRE_3,
+  INPUT_JOYSTICK_FIRE_4,
+  INPUT_JOYSTICK_FIRE_5,
+  INPUT_JOYSTICK_FIRE_6,
+  INPUT_JOYSTICK_FIRE_7,
+  INPUT_JOYSTICK_FIRE_8,
+  INPUT_JOYSTICK_FIRE_9,
+  INPUT_JOYSTICK_FIRE_10,
 
 } input_joystick_button;
 
